--- a/CSS/aboutme.css
+++ b/CSS/aboutme.css
@@ -1,10 +1,12 @@
 h1 {
     font-family: 'Righteous', cursive;
-    /* color: white; */
+    color: white;
 }
 
 p {
     font-family: 'Quicksand', sans-serif;
+    font-size: 23px;
+    color: white;
 }
 .wrapper{
     border: 2px solid black;
@@ -21,10 +23,33 @@ p {
     border-radius: 50%;
     background-color: white;
 }
+.homepage{
+    background-color: black;
+    color: white;
+    width: 200px;
+    height: 60px;
+}
 .margin{
     transition: ease-in 250ms;
     margin-left: 40px;
 }
 .hidden{
     display: none;
+}
+.switch-case-1{
+    border: 2px solid white;
+}
+.switch-case-2{
+    border: 2px solid white;
+}
+button{
+    margin-bottom: 10px;
+    border-radius: 25px;
+    font-family: 'Quicksand', cursive;
+    transition: ease-in-out 250ms;
+}
+button:hover{
+    background-color: black;
+    color: white;
+    transform: translateY(5px);
 }
